(fix) school jobs table no longer breaks on mobile
- scrolls horizontally instead of poking out of the layout

--- a/app/assets/stylesheets/base/_utilities.scss
+++ b/app/assets/stylesheets/base/_utilities.scss
@@ -14,3 +14,7 @@
 .wordwrap {
   word-wrap:break-word;
 }
+
+.overflow-scroll {
+  overflow: scroll;
+}
